[gd_scene load_steps=5 format=3 uid="uid://bdontdm0563nu"]

[ext_resource type="Script" path="res://scenes/play.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c0cka18yihvk2" path="res://art/hud/black-512x512.png" id="2"]
[ext_resource type="Shader" path="res://engine/shaders/screen-whirl.gdshader" id="3"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("3")
shader_parameter/rotation = -0.5

[node name="Boring" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.854902)
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0
texture = ExtResource("2")

[node name="Sprites" type="Control" parent="."]
anchors_preset = 0
offset_left = -130.813
offset_top = -59.4604
offset_right = -90.8129
offset_bottom = -19.4604

[node name="Title" type="Label" parent="Sprites"]
layout_mode = 0
offset_left = 810.813
offset_top = 155.46
offset_right = 1230.81
offset_bottom = 215.46
theme_override_font_sizes/font_size = 48
text = "DO YOUR CHORES"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1279.0
offset_top = 387.0
offset_right = 1850.0
offset_bottom = 980.0
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="LabelContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1316.0
offset_top = 426.0
offset_right = 1805.0
offset_bottom = 939.0

[node name="Label" type="Label" parent="LabelContainer"]
layout_mode = 2
text = "CHORE BOARD B"

[node name="WhirlShader" type="ColorRect" parent="."]
material = SubResource("1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AddLabel" type="Button" parent="."]
layout_mode = 0
offset_left = 722.0
offset_top = 509.0
offset_right = 1233.0
offset_bottom = 615.0
text = "Add Another Chore ->"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 348.0
offset_top = 885.0
offset_right = 745.0
offset_bottom = 989.0
focus_neighbor_bottom = NodePath("../New")
text = "MAIN MENU"

[node name="Previous" type="Button" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 692.0
offset_right = 566.0
offset_bottom = 792.0
text = "<- PREVIOUS SCENE"

[node name="Debug" type="Label" parent="."]
layout_mode = 0
offset_left = 1403.0
offset_top = 80.0
offset_right = 1864.0
offset_bottom = 122.0
text = "DEV: Press ~ for debug console"

[connection signal="pressed" from="AddLabel" to="." method="_on_AddLabel_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Previous" to="." method="_on_Previous_pressed"]
